# pyqt-grouptab-widget

./: .gitignore  README.md  demo.py  grouptabbar.py  grouptabwidget.py  pyproject.toml  requirements.txt
examples/: basic_example.py
src/grouptab/: __init__.py  grouptabbar.py  grouptabwidget.py
tests/: conftest.py  test_grouptab.py
